// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EstimateCost - Zone render region component, with animation 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    -webkit-transform: scale(0);
    -moz-transform: scale(0);
    -ms-transform: scale(0);
    transform: scale(0);
  }

  100% {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

.css-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1twbxpf-OverlayContainer {
  position: fixed;
  z-index: 999;
  left: 0;
  right: 0;
  bottom: 0px;
  height: 120px;
  background-color: #ffffff;
  margin: 0 0 0 260px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  -webkit-transition: bottom 0.3s,box-shadow 0.3s;
  transition: bottom 0.3s,box-shadow 0.3s;
}

.css-lxo6w7-List {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

.css-15sn1rs-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
  border: 0;
}

.css-15sn1rs-OverlayRow:first-of-type,
.css-15sn1rs-OverlayRow:last-child {
  border: 0;
}

.css-4d2pis-Cell-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.css-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1odwddd {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-6px6v4-StyledResourceName-StyledResourceName-StyledResourceName {
  text-align: initial;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-animation: 800ms animation-0;
  animation: 800ms animation-0;
}

.css-swljnq-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.css-jcmb51-StyledImage {
  width: 15px;
  margin-right: 8px;
}

.css-upbfm5-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
}

.css-upbfm5-OverlayRow:first-of-type,
.css-upbfm5-OverlayRow:last-child {
  border: 0;
}

.css-9bqyx6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-6qg2f3-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.css-6qg2f3-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.css-11xji2n-ItemResourceName {
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-12uv9zd-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 24px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.css-l49cjj-StyledTable-spacedChildren {
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 4px 4px 0 4px;
}

.css-l49cjj-StyledTable-spacedChildren>* {
  margin-top: 0;
}

.css-l49cjj-StyledTable-spacedChildren>*+* {
  margin-top: 16px;
}

.css-d78yft-PriceCol {
  background-color: #ffffff;
}

.css-gy9ug9-Title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0;
  font-size: 18px;
  color: #3f4250;
  font-weight: 500;
  padding: 16px;
}

.css-1c6bnf8-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
}

.css-1c6bnf8-sizeStyles-StyledIcon .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.css-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
  padding: 0;
}

.css-1e9mbjr-TimeCell {
  max-width: 200px;
  padding: 16px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  text-align: left;
  float: right;
}

.css-e8qtir {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-igijr9-CustomTextInput input {
  border-radius: 4px 0 0 4px;
  min-width: 60px;
  border-right: 0;
}

.css-igijr9-CustomTextInput input:hover,
.css-igijr9-CustomTextInput input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-right-width: 1px;
  border-right-style: solid;
  border-color: #521094;
}

.css-igijr9-CustomTextInput input[type='number']::-webkit-inner-spin-button,
.css-igijr9-CustomTextInput input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-igijr9-CustomTextInput input[type='number'] {
  -moz-appearance: textfield;
}

.css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  height: 40px;
  height: 40px;
}

.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.css-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.css-zhj3xq-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  background-color: #ffffff;
  border-color: #d9dadd;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  box-sizing: border-box;
  color: #3f4250;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.css-zhj3xq-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.css-zhj3xq-control:focus-within {
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-zhj3xq-control:hover {
  border-color: #792dd4;
}

.css-1827o3p-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 2px 8px;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.css-1827o3p-ValueContainer label {
  display: none;
}

.css-110bzf5 {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #3f4250;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.css-1deka0w-singleValue {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #3f4250;
  margin-left: 0;
  margin-right: 0;
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.css-1xwier8-inputStyles {
  visibility: visible;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.css-1xwier8-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.css-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.css-dh2bvv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 1px;
  background-color: #d9dadd;
  margin-bottom: 8px;
  margin-top: 8px;
  box-sizing: border-box;
  display: none;
}

.css-1xc3v61-indicatorContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.css-1xc3v61-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-19b723i-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.css-1meok3w-StyledLeftSide {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 56px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.css-12tubxd-StyledResourceName {
  text-align: right;
}

.css-4laor4-StyledRegular-StyledStrong {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.css-np418x-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
}

.css-1xemy00-StyleNoPriceItem {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.css-1k8mic4-EmptyTable {
  margin: 0;
  width: 100%;
}

.css-wpkagv-EmptyCell {
  width: 538px;
}

.css-12u8ruk-Cell-TotalPriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-color: #d9dadd;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0 0 4px 4px;
  min-width: 202px;
  height: 56px;
  background-color: #f1eefc;
}

.css-yw3y7k-StyledText {
  color: #641cb3;
  font-size: 25px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

<div
    class="css-1t7ypwa ehpbis70"
  >
    <div
      class="css-1twbxpf-OverlayContainer e1p62vjs2"
      data-testid="summary-overlay"
    >
      <ul
        class="css-lxo6w7-List e1p62vjs1"
      >
        <li
          class="css-15sn1rs-OverlayRow e1xb5k8j3"
        >
          <div
            class="css-4d2pis-Cell-Cell e1kzy2rr8"
            width="inherit"
          >
            <div>
              <div
                class="css-77g8v1 ehpbis70"
              >
                <div
                  class="css-gy0d8m ehpbis70"
                >
                  <p
                    class="css-1odwddd e13y3mga0"
                  >
                    Availability Zone
                  </p>
                </div>
              </div>
              <div
                class="css-6px6v4-StyledResourceName-StyledResourceName-StyledResourceName e1kzy2rr7"
              >
                <div
                  class="e1bhvxf60 css-swljnq-StyledRegular-StyledStrong e1l9k4qo0"
                >
                  <img
                    alt="nl-ams-1"
                    class="css-jcmb51-StyledImage e24b3x10"
                    src="test-file-stub"
                  />
                  nl-ams-1
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="css-upbfm5-OverlayRow e1xb5k8j3"
        >
          <div
            class="css-9bqyx6 ehpbis70"
          >
            <svg
              class="css-6qg2f3-sizeStyles e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10 1C8.28365 1 6.5916 1.10551 4.93005 1.31046C3.80579 1.44913 3 2.41374 3 3.51661V16.75C3 17.9926 4.00736 19 5.25 19H14.75C15.9926 19 17 17.9926 17 16.75V3.51661C17 2.41374 16.1942 1.44913 15.07 1.31046C13.4084 1.10551 11.7163 1 10 1ZM5.99023 8.75C5.99023 8.33579 6.32602 8 6.74023 8H6.75023C7.16445 8 7.50023 8.33579 7.50023 8.75V8.76C7.50023 9.17421 7.16445 9.51 6.75023 9.51H6.74023C6.32602 9.51 5.99023 9.17421 5.99023 8.76V8.75ZM6.74023 10.1666C6.32602 10.1666 5.99023 10.5024 5.99023 10.9166V10.9266C5.99023 11.3408 6.32602 11.6766 6.74023 11.6766H6.75023C7.16445 11.6766 7.50023 11.3408 7.50023 10.9266V10.9166C7.50023 10.5024 7.16445 10.1666 6.75023 10.1666H6.74023ZM5.99023 13.0833C5.99023 12.669 6.32602 12.3333 6.74023 12.3333H6.75023C7.16445 12.3333 7.50023 12.669 7.50023 13.0833V13.0933C7.50023 13.5075 7.16445 13.8433 6.75023 13.8433H6.74023C6.32602 13.8433 5.99023 13.5075 5.99023 13.0933V13.0833ZM6.74023 14.4999C6.32602 14.4999 5.99023 14.8357 5.99023 15.2499V15.2599C5.99023 15.6741 6.32602 16.0099 6.74023 16.0099H6.75023C7.16445 16.0099 7.50023 15.6741 7.50023 15.2599V15.2499C7.50023 14.8357 7.16445 14.4999 6.75023 14.4999H6.74023ZM8.15691 8.75C8.15691 8.33579 8.49269 8 8.90691 8H8.91691C9.33112 8 9.66691 8.33579 9.66691 8.75V8.76C9.66691 9.17421 9.33112 9.51 8.91691 9.51H8.90691C8.49269 9.51 8.15691 9.17421 8.15691 8.76V8.75ZM8.90691 10.1666C8.49269 10.1666 8.15691 10.5024 8.15691 10.9166V10.9266C8.15691 11.3408 8.49269 11.6766 8.90691 11.6766H8.91691C9.33112 11.6766 9.66691 11.3408 9.66691 10.9266V10.9166C9.66691 10.5024 9.33112 10.1666 8.91691 10.1666H8.90691ZM8.15691 13.0833C8.15691 12.669 8.49269 12.3333 8.90691 12.3333H8.91691C9.33112 12.3333 9.66691 12.669 9.66691 13.0833V13.0933C9.66691 13.5075 9.33112 13.8433 8.91691 13.8433H8.90691C8.49269 13.8433 8.15691 13.5075 8.15691 13.0933V13.0833ZM8.90691 14.4999C8.49269 14.4999 8.15691 14.8357 8.15691 15.2499V15.2599C8.15691 15.6741 8.49269 16.0099 8.90691 16.0099H8.91691C9.33112 16.0099 9.66691 15.6741 9.66691 15.2599V15.2499C9.66691 14.8357 9.33112 14.4999 8.91691 14.4999H8.90691ZM10.3269 8.75C10.3269 8.33579 10.6627 8 11.0769 8H11.0869C11.5011 8 11.8369 8.33579 11.8369 8.75V8.76C11.8369 9.17421 11.5011 9.51 11.0869 9.51H11.0769C10.6627 9.51 10.3269 9.17421 10.3269 8.76V8.75ZM11.0769 10.1666C10.6627 10.1666 10.3269 10.5024 10.3269 10.9166V10.9266C10.3269 11.3408 10.6627 11.6766 11.0769 11.6766H11.0869C11.5011 11.6766 11.8369 11.3408 11.8369 10.9266V10.9166C11.8369 10.5024 11.5011 10.1666 11.0869 10.1666H11.0769ZM10.3269 13.0833C10.3269 12.669 10.6627 12.3333 11.0769 12.3333H11.0869C11.5011 12.3333 11.8369 12.669 11.8369 13.0833V13.0933C11.8369 13.5075 11.5011 13.8433 11.0869 13.8433H11.0769C10.6627 13.8433 10.3269 13.5075 10.3269 13.0933V13.0833ZM11.0769 14.4999C10.6627 14.4999 10.3269 14.8357 10.3269 15.2499V15.2599C10.3269 15.6741 10.6627 16.0099 11.0769 16.0099H11.0869C11.5011 16.0099 11.8369 15.6741 11.8369 15.2599V15.2499C11.8369 14.8357 11.5011 14.4999 11.0869 14.4999H11.0769ZM12.5002 8.75C12.5002 8.33579 12.836 8 13.2502 8H13.2602C13.6744 8 14.0102 8.33579 14.0102 8.75V8.76C14.0102 9.17421 13.6744 9.51 13.2602 9.51H13.2502C12.836 9.51 12.5002 9.17421 12.5002 8.76V8.75ZM13.2502 10.1666C12.836 10.1666 12.5002 10.5024 12.5002 10.9166V10.9266C12.5002 11.3408 12.836 11.6766 13.2502 11.6766H13.2602C13.6744 11.6766 14.0102 11.3408 14.0102 10.9266V10.9166C14.0102 10.5024 13.6744 10.1666 13.2602 10.1666H13.2502ZM13.2502 12.3334C13.6644 12.3334 14.0002 12.6692 14.0002 13.0834V15.25C14.0002 15.6643 13.6644 16 13.2502 16C12.836 16 12.5002 15.6643 12.5002 15.25V13.0834C12.5002 12.6692 12.836 12.3334 13.2502 12.3334ZM6.75 4C6.33579 4 6 4.33579 6 4.75V5.25C6 5.66421 6.33579 6 6.75 6H13.25C13.6642 6 14 5.66421 14 5.25V4.75C14 4.33579 13.6642 4 13.25 4H6.75Z"
                fill-rule="evenodd"
              />
            </svg>
            Estimated cost
          </div>
          <div
            class="css-11xji2n-ItemResourceName e1xb5k8j1"
          >
            <div
              class="e1bhvxf60 css-12uv9zd-StyledRegular-StyledStrong e1l9k4qo0"
            >
              <span
                class="css-1bp6ks2-LineThrough e1d1k6i0"
              >
                €0.00/Hour(s)
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="css-1odwddd e13y3mga0"
    >
      This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
    </span>
    <div>
      <table
        cellpadding="0"
        cellspacing="0"
        class="css-l49cjj-StyledTable-spacedChildren e1xb5k8j14"
        data-testid="summary"
      >
        <colgroup>
          <col />
          <col
            class="css-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <thead>
          <tr>
            <th>
              <h3
                class="css-gy9ug9-Title e1xb5k8j8"
              >
                <svg
                  class="excc3v71 css-1c6bnf8-sizeStyles-StyledIcon e1gt4cfo0"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 2.52113C8.45228 2.52113 6.92579 2.61193 5.42536 2.78851C4.90498 2.84976 4.5 3.30969 4.5 3.87914V16.338C4.5 16.9681 5.00368 17.4789 5.625 17.4789H14.375C14.9963 17.4789 15.5 16.9681 15.5 16.338V3.87914C15.5 3.30969 15.095 2.84976 14.5746 2.78851C13.0742 2.61193 11.5477 2.52113 10 2.52113ZM5.25244 1.27753C6.81015 1.09421 8.39438 1 10 1C11.6056 1 13.1899 1.09421 14.7476 1.27753C16.0615 1.43217 17 2.57594 17 3.87914V16.338C17 17.8082 15.8247 19 14.375 19H5.625C4.17525 19 3 17.8082 3 16.338V3.87914C3 2.57594 3.93849 1.43217 5.25244 1.27753ZM6.125 4.92958C6.125 4.50953 6.46079 4.16901 6.875 4.16901H13.125C13.5392 4.16901 13.875 4.50953 13.875 4.92958V6.83099C13.875 7.25103 13.5392 7.59155 13.125 7.59155H6.875C6.46079 7.59155 6.125 7.25103 6.125 6.83099V4.92958ZM7.625 5.69014V6.07042H12.375V5.69014H7.625ZM6.125 9.3662C6.125 8.94615 6.46079 8.60563 6.875 8.60563H6.88125C7.29546 8.60563 7.63125 8.94615 7.63125 9.3662V9.37253C7.63125 9.79258 7.29546 10.1331 6.88125 10.1331H6.875C6.46079 10.1331 6.125 9.79258 6.125 9.37253V9.3662ZM8.2063 9.3662C8.2063 8.94615 8.54209 8.60563 8.9563 8.60563H8.96255C9.37676 8.60563 9.71255 8.94615 9.71255 9.3662V9.37253C9.71255 9.79258 9.37676 10.1331 8.96255 10.1331H8.9563C8.54209 10.1331 8.2063 9.79258 8.2063 9.37253V9.3662ZM10.2937 9.3662C10.2937 8.94615 10.6295 8.60563 11.0437 8.60563H11.05C11.4642 8.60563 11.8 8.94615 11.8 9.3662V9.37253C11.8 9.79258 11.4642 10.1331 11.05 10.1331H11.0437C10.6295 10.1331 10.2937 9.79258 10.2937 9.37253V9.3662ZM12.375 9.3662C12.375 8.94615 12.7108 8.60563 13.125 8.60563H13.1313C13.5455 8.60563 13.8813 8.94615 13.8813 9.3662V9.37253C13.8813 9.79258 13.5455 10.1331 13.1313 10.1331H13.125C12.7108 10.1331 12.375 9.79258 12.375 9.37253V9.3662ZM6.125 11.2676C6.125 10.8476 6.46079 10.507 6.875 10.507H6.88125C7.29546 10.507 7.63125 10.8476 7.63125 11.2676V11.2739C7.63125 11.694 7.29546 12.0345 6.88125 12.0345H6.875C6.46079 12.0345 6.125 11.694 6.125 11.2739V11.2676ZM8.2063 11.2676C8.2063 10.8476 8.54209 10.507 8.9563 10.507H8.96255C9.37676 10.507 9.71255 10.8476 9.71255 11.2676V11.2739C9.71255 11.694 9.37676 12.0345 8.96255 12.0345H8.9563C8.54209 12.0345 8.2063 11.694 8.2063 11.2739V11.2676ZM10.2937 11.2676C10.2937 10.8476 10.6295 10.507 11.0437 10.507H11.05C11.4642 10.507 11.8 10.8476 11.8 11.2676V11.2739C11.8 11.694 11.4642 12.0345 11.05 12.0345H11.0437C10.6295 12.0345 10.2937 11.694 10.2937 11.2739V11.2676ZM12.375 11.2676C12.375 10.8476 12.7108 10.507 13.125 10.507H13.1313C13.5455 10.507 13.8813 10.8476 13.8813 11.2676V11.2739C13.8813 11.694 13.5455 12.0345 13.1313 12.0345H13.125C12.7108 12.0345 12.375 11.694 12.375 11.2739V11.2676ZM6.125 13.169C6.125 12.749 6.46079 12.4085 6.875 12.4085H6.88125C7.29546 12.4085 7.63125 12.749 7.63125 13.169V13.1754C7.63125 13.5954 7.29546 13.9359 6.88125 13.9359H6.875C6.46079 13.9359 6.125 13.5954 6.125 13.1754V13.169ZM8.2063 13.169C8.2063 12.749 8.54209 12.4085 8.9563 12.4085H8.96255C9.37676 12.4085 9.71255 12.749 9.71255 13.169V13.1754C9.71255 13.5954 9.37676 13.9359 8.96255 13.9359H8.9563C8.54209 13.9359 8.2063 13.5954 8.2063 13.1754V13.169ZM10.2937 13.169C10.2937 12.749 10.6295 12.4085 11.0437 12.4085H11.05C11.4642 12.4085 11.8 12.749 11.8 13.169V13.1754C11.8 13.5954 11.4642 13.9359 11.05 13.9359H11.0437C10.6295 13.9359 10.2937 13.5954 10.2937 13.1754V13.169ZM13.125 12.4085C13.5392 12.4085 13.875 12.749 13.875 13.169V15.0704C13.875 15.4905 13.5392 15.831 13.125 15.831C12.7108 15.831 12.375 15.4905 12.375 15.0704V13.169C12.375 12.749 12.7108 12.4085 13.125 12.4085ZM6.125 15.0704C6.125 14.6504 6.46079 14.3099 6.875 14.3099H6.88125C7.29546 14.3099 7.63125 14.6504 7.63125 15.0704V15.0768C7.63125 15.4968 7.29546 15.8373 6.88125 15.8373H6.875C6.46079 15.8373 6.125 15.4968 6.125 15.0768V15.0704ZM8.2063 15.0704C8.2063 14.6504 8.54209 14.3099 8.9563 14.3099H8.96255C9.37676 14.3099 9.71255 14.6504 9.71255 15.0704V15.0768C9.71255 15.4968 9.37676 15.8373 8.96255 15.8373H8.9563C8.54209 15.8373 8.2063 15.4968 8.2063 15.0768V15.0704ZM10.2937 15.0704C10.2937 14.6504 10.6295 14.3099 11.0437 14.3099H11.05C11.4642 14.3099 11.8 14.6504 11.8 15.0704V15.0768C11.8 15.4968 11.4642 15.8373 11.05 15.8373H11.0437C10.6295 15.8373 10.2937 15.4968 10.2937 15.0768V15.0704Z"
                    fill-rule="evenodd"
                  />
                </svg>
                Estimated cost
              </h3>
            </th>
            <th
              class="css-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell excc3v70"
            >
              <div
                class="css-1e9mbjr-TimeCell e1xb5k8j6"
              >
                <div
                  class="css-e8qtir e3f5lzv0"
                >
                  <div
                    class="css-igijr9-CustomTextInput epio27v1"
                  >
                    <div
                      class="css-bjn8wh el3h3g95"
                    >
                      <input
                        autocomplete="on"
                        class="css-1ehejze el3h3g92"
                        max="99999"
                        min="1"
                        name="iteration-value"
                        placeholder="0"
                        style="height: 40px;"
                        type="number"
                        value="1"
                      />
                    </div>
                    <div
                      class="css-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="css-xbtm7g el3h3g94"
                      />
                    </div>
                  </div>
                  <div
                    class="epio27v0 epio27v0 css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput e11gt5pw4"
                    data-testid="select-input-iteration-unit"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-3-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" css-zhj3xq-control"
                    >
                      <div
                        class=" css-1827o3p-ValueContainer"
                      >
                        <label
                          aria-live="assertive"
                          as="label"
                          class="css-110bzf5 e11gt5pw2"
                          for=":re:"
                        >
                          Select...
                        </label>
                        <div
                          class=" css-1deka0w-singleValue"
                        >
                          Hour(s)
                        </div>
                        <div
                          class="css-1xwier8-inputStyles"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id=":re:"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-ralm3g-IndicatorsContainer"
                      >
                        <span
                          class=" css-dh2bvv-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-1xc3v61-indicatorContainer"
                        >
                          <div
                            class="css-9bqyx6 ehpbis70"
                          >
                            <svg
                              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M4.21967 6.21967C4.51256 5.92678 4.98744 5.92678 5.28033 6.21967L8 8.93934L10.7197 6.21967C11.0126 5.92678 11.4874 5.92678 11.7803 6.21967C12.0732 6.51256 12.0732 6.98744 11.7803 7.28033L8.53033 10.5303C8.23744 10.8232 7.76256 10.8232 7.46967 10.5303L4.21967 7.28033C3.92678 6.98744 3.92678 6.51256 4.21967 6.21967Z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <input
                      name="iteration-unit"
                      type="hidden"
                      value="hours"
                    />
                    <div
                      class="css-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="css-xbtm7g e11gt5pw3"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="css-11ls5i6-StyledTr e1xb5k8j4"
          >
            <td
              class="css-19b723i-Cell e1xb5k8j11"
              width="530px"
            >
              <div
                class="css-1meok3w-StyledLeftSide e1xb5k8j2"
              >
                <div
                  class="css-77g8v1 ehpbis70"
                >
                  <div
                    class="css-gy0d8m ehpbis70"
                  >
                    <p
                      class="css-1odwddd e13y3mga0"
                    >
                      Availability Zone
                    </p>
                  </div>
                </div>
                <div
                  class="css-12tubxd-StyledResourceName e1kzy2rr7"
                >
                  <div
                    class="e1bhvxf60 css-4laor4-StyledRegular-StyledStrong e1l9k4qo0"
                  >
                    <img
                      alt="nl-ams-1"
                      class="css-jcmb51-StyledImage e24b3x10"
                      src="test-file-stub"
                    />
                    nl-ams-1
                  </div>
                </div>
              </div>
            </td>
            <td
              class="css-np418x-Cell-StyledPriceCell-PriceCell e1kzy2rr1"
            >
              <p
                class="e1kzy2rr0 css-1xemy00-StyleNoPriceItem e13y3mga0"
              >
                €0.00
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        cellpadding="0"
        cellspacing="0"
        class="css-1k8mic4-EmptyTable e1xb5k8j9"
      >
        <colgroup>
          <col />
          <col
            class="css-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <tbody>
          <tr>
            <td
              aria-label="control"
              class="css-wpkagv-EmptyCell e1xb5k8j7"
            />
            <td
              class="css-12u8ruk-Cell-TotalPriceCell e1xb5k8j10"
            >
              <h3
                class="excc3v73 css-yw3y7k-StyledText e13y3mga0"
              >
                <span
                  class="css-1bp6ks2-LineThrough e1d1k6i0"
                >
                  €0.00
                </span>
              </h3>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EstimateCost - Zone render zone component 1`] = `
<DocumentFragment>
  .css-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1twbxpf-OverlayContainer {
  position: fixed;
  z-index: 999;
  left: 0;
  right: 0;
  bottom: 0px;
  height: 120px;
  background-color: #ffffff;
  margin: 0 0 0 260px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  -webkit-transition: bottom 0.3s,box-shadow 0.3s;
  transition: bottom 0.3s,box-shadow 0.3s;
}

.css-lxo6w7-List {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

.css-15sn1rs-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
  border: 0;
}

.css-15sn1rs-OverlayRow:first-of-type,
.css-15sn1rs-OverlayRow:last-child {
  border: 0;
}

.css-4d2pis-Cell-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.css-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1odwddd {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-2sj51q-StyledResourceName-StyledResourceName {
  text-align: initial;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-swljnq-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.css-jcmb51-StyledImage {
  width: 15px;
  margin-right: 8px;
}

.css-upbfm5-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
}

.css-upbfm5-OverlayRow:first-of-type,
.css-upbfm5-OverlayRow:last-child {
  border: 0;
}

.css-9bqyx6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-6qg2f3-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.css-6qg2f3-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.css-11xji2n-ItemResourceName {
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-12uv9zd-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 24px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.css-l49cjj-StyledTable-spacedChildren {
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 4px 4px 0 4px;
}

.css-l49cjj-StyledTable-spacedChildren>* {
  margin-top: 0;
}

.css-l49cjj-StyledTable-spacedChildren>*+* {
  margin-top: 16px;
}

.css-d78yft-PriceCol {
  background-color: #ffffff;
}

.css-gy9ug9-Title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0;
  font-size: 18px;
  color: #3f4250;
  font-weight: 500;
  padding: 16px;
}

.css-1c6bnf8-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
}

.css-1c6bnf8-sizeStyles-StyledIcon .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.css-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
  padding: 0;
}

.css-1e9mbjr-TimeCell {
  max-width: 200px;
  padding: 16px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  text-align: left;
  float: right;
}

.css-e8qtir {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-igijr9-CustomTextInput input {
  border-radius: 4px 0 0 4px;
  min-width: 60px;
  border-right: 0;
}

.css-igijr9-CustomTextInput input:hover,
.css-igijr9-CustomTextInput input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-right-width: 1px;
  border-right-style: solid;
  border-color: #521094;
}

.css-igijr9-CustomTextInput input[type='number']::-webkit-inner-spin-button,
.css-igijr9-CustomTextInput input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-igijr9-CustomTextInput input[type='number'] {
  -moz-appearance: textfield;
}

.css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  height: 40px;
  height: 40px;
}

.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.css-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.css-zhj3xq-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  background-color: #ffffff;
  border-color: #d9dadd;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  box-sizing: border-box;
  color: #3f4250;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.css-zhj3xq-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.css-zhj3xq-control:focus-within {
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-zhj3xq-control:hover {
  border-color: #792dd4;
}

.css-1827o3p-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 2px 8px;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.css-1827o3p-ValueContainer label {
  display: none;
}

.css-110bzf5 {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #3f4250;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.css-1deka0w-singleValue {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #3f4250;
  margin-left: 0;
  margin-right: 0;
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.css-1xwier8-inputStyles {
  visibility: visible;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.css-1xwier8-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.css-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.css-dh2bvv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 1px;
  background-color: #d9dadd;
  margin-bottom: 8px;
  margin-top: 8px;
  box-sizing: border-box;
  display: none;
}

.css-1xc3v61-indicatorContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.css-1xc3v61-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-19b723i-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.css-1meok3w-StyledLeftSide {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 56px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.css-12tubxd-StyledResourceName {
  text-align: right;
}

.css-4laor4-StyledRegular-StyledStrong {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.css-np418x-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
}

.css-1xemy00-StyleNoPriceItem {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.css-1k8mic4-EmptyTable {
  margin: 0;
  width: 100%;
}

.css-wpkagv-EmptyCell {
  width: 538px;
}

.css-12u8ruk-Cell-TotalPriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-color: #d9dadd;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0 0 4px 4px;
  min-width: 202px;
  height: 56px;
  background-color: #f1eefc;
}

.css-yw3y7k-StyledText {
  color: #641cb3;
  font-size: 25px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

<div
    class="css-1t7ypwa ehpbis70"
  >
    <div
      class="css-1twbxpf-OverlayContainer e1p62vjs2"
      data-testid="summary-overlay"
    >
      <ul
        class="css-lxo6w7-List e1p62vjs1"
      >
        <li
          class="css-15sn1rs-OverlayRow e1xb5k8j3"
        >
          <div
            class="css-4d2pis-Cell-Cell e1kzy2rr8"
            width="inherit"
          >
            <div>
              <div
                class="css-77g8v1 ehpbis70"
              >
                <div
                  class="css-gy0d8m ehpbis70"
                >
                  <p
                    class="css-1odwddd e13y3mga0"
                  >
                    Availability Zone
                  </p>
                </div>
              </div>
              <div
                class="css-2sj51q-StyledResourceName-StyledResourceName e1kzy2rr7"
              >
                <div
                  class="e1bhvxf60 css-swljnq-StyledRegular-StyledStrong e1l9k4qo0"
                >
                  <img
                    alt="fr-par-1"
                    class="css-jcmb51-StyledImage e24b3x10"
                    src="test-file-stub"
                  />
                  fr-par-1
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="css-upbfm5-OverlayRow e1xb5k8j3"
        >
          <div
            class="css-9bqyx6 ehpbis70"
          >
            <svg
              class="css-6qg2f3-sizeStyles e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10 1C8.28365 1 6.5916 1.10551 4.93005 1.31046C3.80579 1.44913 3 2.41374 3 3.51661V16.75C3 17.9926 4.00736 19 5.25 19H14.75C15.9926 19 17 17.9926 17 16.75V3.51661C17 2.41374 16.1942 1.44913 15.07 1.31046C13.4084 1.10551 11.7163 1 10 1ZM5.99023 8.75C5.99023 8.33579 6.32602 8 6.74023 8H6.75023C7.16445 8 7.50023 8.33579 7.50023 8.75V8.76C7.50023 9.17421 7.16445 9.51 6.75023 9.51H6.74023C6.32602 9.51 5.99023 9.17421 5.99023 8.76V8.75ZM6.74023 10.1666C6.32602 10.1666 5.99023 10.5024 5.99023 10.9166V10.9266C5.99023 11.3408 6.32602 11.6766 6.74023 11.6766H6.75023C7.16445 11.6766 7.50023 11.3408 7.50023 10.9266V10.9166C7.50023 10.5024 7.16445 10.1666 6.75023 10.1666H6.74023ZM5.99023 13.0833C5.99023 12.669 6.32602 12.3333 6.74023 12.3333H6.75023C7.16445 12.3333 7.50023 12.669 7.50023 13.0833V13.0933C7.50023 13.5075 7.16445 13.8433 6.75023 13.8433H6.74023C6.32602 13.8433 5.99023 13.5075 5.99023 13.0933V13.0833ZM6.74023 14.4999C6.32602 14.4999 5.99023 14.8357 5.99023 15.2499V15.2599C5.99023 15.6741 6.32602 16.0099 6.74023 16.0099H6.75023C7.16445 16.0099 7.50023 15.6741 7.50023 15.2599V15.2499C7.50023 14.8357 7.16445 14.4999 6.75023 14.4999H6.74023ZM8.15691 8.75C8.15691 8.33579 8.49269 8 8.90691 8H8.91691C9.33112 8 9.66691 8.33579 9.66691 8.75V8.76C9.66691 9.17421 9.33112 9.51 8.91691 9.51H8.90691C8.49269 9.51 8.15691 9.17421 8.15691 8.76V8.75ZM8.90691 10.1666C8.49269 10.1666 8.15691 10.5024 8.15691 10.9166V10.9266C8.15691 11.3408 8.49269 11.6766 8.90691 11.6766H8.91691C9.33112 11.6766 9.66691 11.3408 9.66691 10.9266V10.9166C9.66691 10.5024 9.33112 10.1666 8.91691 10.1666H8.90691ZM8.15691 13.0833C8.15691 12.669 8.49269 12.3333 8.90691 12.3333H8.91691C9.33112 12.3333 9.66691 12.669 9.66691 13.0833V13.0933C9.66691 13.5075 9.33112 13.8433 8.91691 13.8433H8.90691C8.49269 13.8433 8.15691 13.5075 8.15691 13.0933V13.0833ZM8.90691 14.4999C8.49269 14.4999 8.15691 14.8357 8.15691 15.2499V15.2599C8.15691 15.6741 8.49269 16.0099 8.90691 16.0099H8.91691C9.33112 16.0099 9.66691 15.6741 9.66691 15.2599V15.2499C9.66691 14.8357 9.33112 14.4999 8.91691 14.4999H8.90691ZM10.3269 8.75C10.3269 8.33579 10.6627 8 11.0769 8H11.0869C11.5011 8 11.8369 8.33579 11.8369 8.75V8.76C11.8369 9.17421 11.5011 9.51 11.0869 9.51H11.0769C10.6627 9.51 10.3269 9.17421 10.3269 8.76V8.75ZM11.0769 10.1666C10.6627 10.1666 10.3269 10.5024 10.3269 10.9166V10.9266C10.3269 11.3408 10.6627 11.6766 11.0769 11.6766H11.0869C11.5011 11.6766 11.8369 11.3408 11.8369 10.9266V10.9166C11.8369 10.5024 11.5011 10.1666 11.0869 10.1666H11.0769ZM10.3269 13.0833C10.3269 12.669 10.6627 12.3333 11.0769 12.3333H11.0869C11.5011 12.3333 11.8369 12.669 11.8369 13.0833V13.0933C11.8369 13.5075 11.5011 13.8433 11.0869 13.8433H11.0769C10.6627 13.8433 10.3269 13.5075 10.3269 13.0933V13.0833ZM11.0769 14.4999C10.6627 14.4999 10.3269 14.8357 10.3269 15.2499V15.2599C10.3269 15.6741 10.6627 16.0099 11.0769 16.0099H11.0869C11.5011 16.0099 11.8369 15.6741 11.8369 15.2599V15.2499C11.8369 14.8357 11.5011 14.4999 11.0869 14.4999H11.0769ZM12.5002 8.75C12.5002 8.33579 12.836 8 13.2502 8H13.2602C13.6744 8 14.0102 8.33579 14.0102 8.75V8.76C14.0102 9.17421 13.6744 9.51 13.2602 9.51H13.2502C12.836 9.51 12.5002 9.17421 12.5002 8.76V8.75ZM13.2502 10.1666C12.836 10.1666 12.5002 10.5024 12.5002 10.9166V10.9266C12.5002 11.3408 12.836 11.6766 13.2502 11.6766H13.2602C13.6744 11.6766 14.0102 11.3408 14.0102 10.9266V10.9166C14.0102 10.5024 13.6744 10.1666 13.2602 10.1666H13.2502ZM13.2502 12.3334C13.6644 12.3334 14.0002 12.6692 14.0002 13.0834V15.25C14.0002 15.6643 13.6644 16 13.2502 16C12.836 16 12.5002 15.6643 12.5002 15.25V13.0834C12.5002 12.6692 12.836 12.3334 13.2502 12.3334ZM6.75 4C6.33579 4 6 4.33579 6 4.75V5.25C6 5.66421 6.33579 6 6.75 6H13.25C13.6642 6 14 5.66421 14 5.25V4.75C14 4.33579 13.6642 4 13.25 4H6.75Z"
                fill-rule="evenodd"
              />
            </svg>
            Estimated cost
          </div>
          <div
            class="css-11xji2n-ItemResourceName e1xb5k8j1"
          >
            <div
              class="e1bhvxf60 css-12uv9zd-StyledRegular-StyledStrong e1l9k4qo0"
            >
              <span
                class="css-1bp6ks2-LineThrough e1d1k6i0"
              >
                €0.00/Hour(s)
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="css-1odwddd e13y3mga0"
    >
      This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
    </span>
    <div>
      <table
        cellpadding="0"
        cellspacing="0"
        class="css-l49cjj-StyledTable-spacedChildren e1xb5k8j14"
        data-testid="summary"
      >
        <colgroup>
          <col />
          <col
            class="css-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <thead>
          <tr>
            <th>
              <h3
                class="css-gy9ug9-Title e1xb5k8j8"
              >
                <svg
                  class="excc3v71 css-1c6bnf8-sizeStyles-StyledIcon e1gt4cfo0"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 2.52113C8.45228 2.52113 6.92579 2.61193 5.42536 2.78851C4.90498 2.84976 4.5 3.30969 4.5 3.87914V16.338C4.5 16.9681 5.00368 17.4789 5.625 17.4789H14.375C14.9963 17.4789 15.5 16.9681 15.5 16.338V3.87914C15.5 3.30969 15.095 2.84976 14.5746 2.78851C13.0742 2.61193 11.5477 2.52113 10 2.52113ZM5.25244 1.27753C6.81015 1.09421 8.39438 1 10 1C11.6056 1 13.1899 1.09421 14.7476 1.27753C16.0615 1.43217 17 2.57594 17 3.87914V16.338C17 17.8082 15.8247 19 14.375 19H5.625C4.17525 19 3 17.8082 3 16.338V3.87914C3 2.57594 3.93849 1.43217 5.25244 1.27753ZM6.125 4.92958C6.125 4.50953 6.46079 4.16901 6.875 4.16901H13.125C13.5392 4.16901 13.875 4.50953 13.875 4.92958V6.83099C13.875 7.25103 13.5392 7.59155 13.125 7.59155H6.875C6.46079 7.59155 6.125 7.25103 6.125 6.83099V4.92958ZM7.625 5.69014V6.07042H12.375V5.69014H7.625ZM6.125 9.3662C6.125 8.94615 6.46079 8.60563 6.875 8.60563H6.88125C7.29546 8.60563 7.63125 8.94615 7.63125 9.3662V9.37253C7.63125 9.79258 7.29546 10.1331 6.88125 10.1331H6.875C6.46079 10.1331 6.125 9.79258 6.125 9.37253V9.3662ZM8.2063 9.3662C8.2063 8.94615 8.54209 8.60563 8.9563 8.60563H8.96255C9.37676 8.60563 9.71255 8.94615 9.71255 9.3662V9.37253C9.71255 9.79258 9.37676 10.1331 8.96255 10.1331H8.9563C8.54209 10.1331 8.2063 9.79258 8.2063 9.37253V9.3662ZM10.2937 9.3662C10.2937 8.94615 10.6295 8.60563 11.0437 8.60563H11.05C11.4642 8.60563 11.8 8.94615 11.8 9.3662V9.37253C11.8 9.79258 11.4642 10.1331 11.05 10.1331H11.0437C10.6295 10.1331 10.2937 9.79258 10.2937 9.37253V9.3662ZM12.375 9.3662C12.375 8.94615 12.7108 8.60563 13.125 8.60563H13.1313C13.5455 8.60563 13.8813 8.94615 13.8813 9.3662V9.37253C13.8813 9.79258 13.5455 10.1331 13.1313 10.1331H13.125C12.7108 10.1331 12.375 9.79258 12.375 9.37253V9.3662ZM6.125 11.2676C6.125 10.8476 6.46079 10.507 6.875 10.507H6.88125C7.29546 10.507 7.63125 10.8476 7.63125 11.2676V11.2739C7.63125 11.694 7.29546 12.0345 6.88125 12.0345H6.875C6.46079 12.0345 6.125 11.694 6.125 11.2739V11.2676ZM8.2063 11.2676C8.2063 10.8476 8.54209 10.507 8.9563 10.507H8.96255C9.37676 10.507 9.71255 10.8476 9.71255 11.2676V11.2739C9.71255 11.694 9.37676 12.0345 8.96255 12.0345H8.9563C8.54209 12.0345 8.2063 11.694 8.2063 11.2739V11.2676ZM10.2937 11.2676C10.2937 10.8476 10.6295 10.507 11.0437 10.507H11.05C11.4642 10.507 11.8 10.8476 11.8 11.2676V11.2739C11.8 11.694 11.4642 12.0345 11.05 12.0345H11.0437C10.6295 12.0345 10.2937 11.694 10.2937 11.2739V11.2676ZM12.375 11.2676C12.375 10.8476 12.7108 10.507 13.125 10.507H13.1313C13.5455 10.507 13.8813 10.8476 13.8813 11.2676V11.2739C13.8813 11.694 13.5455 12.0345 13.1313 12.0345H13.125C12.7108 12.0345 12.375 11.694 12.375 11.2739V11.2676ZM6.125 13.169C6.125 12.749 6.46079 12.4085 6.875 12.4085H6.88125C7.29546 12.4085 7.63125 12.749 7.63125 13.169V13.1754C7.63125 13.5954 7.29546 13.9359 6.88125 13.9359H6.875C6.46079 13.9359 6.125 13.5954 6.125 13.1754V13.169ZM8.2063 13.169C8.2063 12.749 8.54209 12.4085 8.9563 12.4085H8.96255C9.37676 12.4085 9.71255 12.749 9.71255 13.169V13.1754C9.71255 13.5954 9.37676 13.9359 8.96255 13.9359H8.9563C8.54209 13.9359 8.2063 13.5954 8.2063 13.1754V13.169ZM10.2937 13.169C10.2937 12.749 10.6295 12.4085 11.0437 12.4085H11.05C11.4642 12.4085 11.8 12.749 11.8 13.169V13.1754C11.8 13.5954 11.4642 13.9359 11.05 13.9359H11.0437C10.6295 13.9359 10.2937 13.5954 10.2937 13.1754V13.169ZM13.125 12.4085C13.5392 12.4085 13.875 12.749 13.875 13.169V15.0704C13.875 15.4905 13.5392 15.831 13.125 15.831C12.7108 15.831 12.375 15.4905 12.375 15.0704V13.169C12.375 12.749 12.7108 12.4085 13.125 12.4085ZM6.125 15.0704C6.125 14.6504 6.46079 14.3099 6.875 14.3099H6.88125C7.29546 14.3099 7.63125 14.6504 7.63125 15.0704V15.0768C7.63125 15.4968 7.29546 15.8373 6.88125 15.8373H6.875C6.46079 15.8373 6.125 15.4968 6.125 15.0768V15.0704ZM8.2063 15.0704C8.2063 14.6504 8.54209 14.3099 8.9563 14.3099H8.96255C9.37676 14.3099 9.71255 14.6504 9.71255 15.0704V15.0768C9.71255 15.4968 9.37676 15.8373 8.96255 15.8373H8.9563C8.54209 15.8373 8.2063 15.4968 8.2063 15.0768V15.0704ZM10.2937 15.0704C10.2937 14.6504 10.6295 14.3099 11.0437 14.3099H11.05C11.4642 14.3099 11.8 14.6504 11.8 15.0704V15.0768C11.8 15.4968 11.4642 15.8373 11.05 15.8373H11.0437C10.6295 15.8373 10.2937 15.4968 10.2937 15.0768V15.0704Z"
                    fill-rule="evenodd"
                  />
                </svg>
                Estimated cost
              </h3>
            </th>
            <th
              class="css-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell excc3v70"
            >
              <div
                class="css-1e9mbjr-TimeCell e1xb5k8j6"
              >
                <div
                  class="css-e8qtir e3f5lzv0"
                >
                  <div
                    class="css-igijr9-CustomTextInput epio27v1"
                  >
                    <div
                      class="css-bjn8wh el3h3g95"
                    >
                      <input
                        autocomplete="on"
                        class="css-1ehejze el3h3g92"
                        max="99999"
                        min="1"
                        name="iteration-value"
                        placeholder="0"
                        style="height: 40px;"
                        type="number"
                        value="1"
                      />
                    </div>
                    <div
                      class="css-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="css-xbtm7g el3h3g94"
                      />
                    </div>
                  </div>
                  <div
                    class="epio27v0 epio27v0 css-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput e11gt5pw4"
                    data-testid="select-input-iteration-unit"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" css-zhj3xq-control"
                    >
                      <div
                        class=" css-1827o3p-ValueContainer"
                      >
                        <label
                          aria-live="assertive"
                          as="label"
                          class="css-110bzf5 e11gt5pw2"
                          for=":r3:"
                        >
                          Select...
                        </label>
                        <div
                          class=" css-1deka0w-singleValue"
                        >
                          Hour(s)
                        </div>
                        <div
                          class="css-1xwier8-inputStyles"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id=":r3:"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-ralm3g-IndicatorsContainer"
                      >
                        <span
                          class=" css-dh2bvv-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-1xc3v61-indicatorContainer"
                        >
                          <div
                            class="css-9bqyx6 ehpbis70"
                          >
                            <svg
                              class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M4.21967 6.21967C4.51256 5.92678 4.98744 5.92678 5.28033 6.21967L8 8.93934L10.7197 6.21967C11.0126 5.92678 11.4874 5.92678 11.7803 6.21967C12.0732 6.51256 12.0732 6.98744 11.7803 7.28033L8.53033 10.5303C8.23744 10.8232 7.76256 10.8232 7.46967 10.5303L4.21967 7.28033C3.92678 6.98744 3.92678 6.51256 4.21967 6.21967Z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <input
                      name="iteration-unit"
                      type="hidden"
                      value="hours"
                    />
                    <div
                      class="css-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="css-xbtm7g e11gt5pw3"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="css-11ls5i6-StyledTr e1xb5k8j4"
          >
            <td
              class="css-19b723i-Cell e1xb5k8j11"
              width="530px"
            >
              <div
                class="css-1meok3w-StyledLeftSide e1xb5k8j2"
              >
                <div
                  class="css-77g8v1 ehpbis70"
                >
                  <div
                    class="css-gy0d8m ehpbis70"
                  >
                    <p
                      class="css-1odwddd e13y3mga0"
                    >
                      Availability Zone
                    </p>
                  </div>
                </div>
                <div
                  class="css-12tubxd-StyledResourceName e1kzy2rr7"
                >
                  <div
                    class="e1bhvxf60 css-4laor4-StyledRegular-StyledStrong e1l9k4qo0"
                  >
                    <img
                      alt="fr-par-1"
                      class="css-jcmb51-StyledImage e24b3x10"
                      src="test-file-stub"
                    />
                    fr-par-1
                  </div>
                </div>
              </div>
            </td>
            <td
              class="css-np418x-Cell-StyledPriceCell-PriceCell e1kzy2rr1"
            >
              <p
                class="e1kzy2rr0 css-1xemy00-StyleNoPriceItem e13y3mga0"
              >
                €0.00
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        cellpadding="0"
        cellspacing="0"
        class="css-1k8mic4-EmptyTable e1xb5k8j9"
      >
        <colgroup>
          <col />
          <col
            class="css-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <tbody>
          <tr>
            <td
              aria-label="control"
              class="css-wpkagv-EmptyCell e1xb5k8j7"
            />
            <td
              class="css-12u8ruk-Cell-TotalPriceCell e1xb5k8j10"
            >
              <h3
                class="excc3v73 css-yw3y7k-StyledText e13y3mga0"
              >
                <span
                  class="css-1bp6ks2-LineThrough e1d1k6i0"
                >
                  €0.00
                </span>
              </h3>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
